fixed word wrap bug and empty tweet bug

--- a/sass/tweet.scss
+++ b/sass/tweet.scss
@@ -12,6 +12,7 @@
 
   p {
     padding: 0 2.4rem;
+    word-break: break-all;
   }
   
   header span {
